[metadata]
name = PyThinFilm
version = 0.0.1b0
author = Martin Stroet
author_email = m.stroet@uq.edu.au
classifiers =
    Environment :: Console
    Framework :: Setuptools Plugin
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
license = GPLv3
license_files = LICENSE
description = Molecular Dynamics protocols for generation of thin film morphologies
long_description = file: README.md

[options]
package_dir=
    =src
packages=find:
install_requires =
    importlib-metadata; python_version<"3.8"
    pyyaml>=6.0
    click>=8.0.4
    jinja2
    numpy

[options.packages.find]
where=src

[options.entry_points]
console_scripts = 
    pytf = PyThinFilm.pytf:cli

[options.extras_require]
docs = sphinx>=5.0; sphinx-rtd-theme>=1.0.0

[options.package_data]
PyThinFilm = *.yml, templates/*.*, templates/**/*.*, resources/*.*, resources/**/*.*, test/*.yml